[gd_scene load_steps=6 format=3 uid="uid://dpxml8httu22p"]

[ext_resource type="Script" uid="uid://dososyn6klnig" path="res://game/game.gd" id="1_4fuuu"]
[ext_resource type="Texture2D" uid="uid://cas5m4ewqqkwx" path="res://assets/GameBg.png" id="2_dxrkv"]
[ext_resource type="PackedScene" uid="uid://bu4ko5wuxw8to" path="res://paddle/paddle.tscn" id="3_dakft"]
[ext_resource type="AudioStream" uid="uid://cdo7tixn45bb5" path="res://assets/bgm_action_5.mp3" id="4_4fuuu"]
[ext_resource type="AudioStream" uid="uid://crrec3sdpce2s" path="res://assets/spell1_0.wav" id="5_dxrkv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_4fuuu")

[node name="GameBg" type="Sprite2D" parent="."]
position = Vector2(576.667, 324)
scale = Vector2(0.603704, 0.603704)
texture = ExtResource("2_dxrkv")

[node name="Paddle" parent="." instance=ExtResource("3_dakft")]
position = Vector2(594, 600)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4fuuu")
volume_db = -15.167
autoplay = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dxrkv")

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
